Fix choice nil result in submissions show action

--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -36,7 +36,7 @@
     - if answer.choice_answer.present?
       %p
         Response:
-        = answer.choice_answer.choice.title
+        = answer.choice_answer.choice.try(:title)
     - if answer.answer_multiple.present?
       %p
         Response:
