--- a/app/views/surveys/_survey.html.haml
+++ b/app/views/surveys/_survey.html.haml
@@ -13,9 +13,6 @@
       %p
         = survey.description
     .col-md-3
-      - if policy(survey).destroy?
-        = link_to fa_icon("remove"), [survey.customer, survey],
-          method: :delete, class: "pull-right"
       .dropdown
         %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
         "data-toggle": "dropdown", href: "#", role: "button"}
@@ -27,3 +24,8 @@
         %ul.dropdown-menu
           %li
             = link_to "Submit this survey", [:new, survey, :submission]
+          - if policy(survey).archive?
+            %li
+              = link_to "Archive survey", [:archive, survey.customer, survey],
+                method: :patch,
+                data: { confirm: "Are you sure you want to archive this survey?" }
