--- a/app/views/layouts/shared/_alert_messages.html.haml
+++ b/app/views/layouts/shared/_alert_messages.html.haml
@@ -1,4 +1,4 @@
 - if flash.any?
   - flash.each do |message_type, message|
     = content_tag :div, message,
-      class:"alert alert-#{message_type} text-center"
+      class:"notify notify-#{message_type}"
