--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,3 +1,3 @@
-%h1.text-center Create a new account and start managing your surveys!
-.user-signup-form
-  = render "form"
+%h1.text-center Create a new account!
+%p.text-center.text-light Fill the following fields and start managing surveys!
+= render "form"
