Add btn-block class to sessions and new user form

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -15,4 +15,4 @@
         .col-xs-5
           %h3.file-name.m-t-0
             = file_name f.object.image
-  = f.button :submit, "SIGN UP", class: "btn-default btn-main center-block"
+  = f.button :submit, "SIGN UP", class: "btn-default btn-block btn-main"
