Change font style

--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -1,8 +1,9 @@
 // Body
 
-@import url("https://fonts.googleapis.com/css?family=Rubik");
-$font-family-sans-serif: "Rubik", sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
+$font-family-sans-serif: 'Yanone Kaffeesatz', sans-serif;
 $font-family-base: $font-family-sans-serif !default;
+$font-size-base: 15px !default;
 
 // Navbar
 
