--- a/app/views/layouts/shared/_account_nav_bar.html.haml
+++ b/app/views/layouts/shared/_account_nav_bar.html.haml
@@ -9,7 +9,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to image_tag("logo.png", width: 200), customers_path, class: "navbar-brand"
+      = link_to image_tag("logo.png", width: 200), root_path, class: "navbar-brand"
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
