--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -69,6 +69,9 @@ section {
   .article-text, .article-form {
     margin: 30px;
   }
+  .article-form {
+    padding: 10px 20px 40px;
+  }
 }
 
 .navbar {
