--- a/app/views/submissions/index.csv.haml
+++ b/app/views/submissions/index.csv.haml
@@ -2,4 +2,4 @@
 = CSV.generate_line headers
 - @submissions.each do |submission|
   = CSV.generate_line([submission.created_at.strftime("%m/%d/%Y at %I:%M%p"),
-    submission.survey.name, submission.user.email], row_sep: "\n")
+    submission.survey.name, submission.user.email])
