--- a/app/views/submissions/index.csv.haml
+++ b/app/views/submissions/index.csv.haml
@@ -1,5 +1,5 @@
 - headers = ['Submission date', 'Survey name', 'User']
-= CSV.generate_line headers
+= CSV.generate_line headers, :row_sep => ?\t, :quote_char => ?\
 - @submissions.each do |submission|
   = CSV.generate_line [submission.created_at.strftime("%m/%d/%Y at %I:%M%p"),
     submission.survey.name, submission.user.email], :row_sep => ?\t, :quote_char => ?\
