--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -1,9 +1,9 @@
 // Body
 
-@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz');
-$font-family-sans-serif: 'Yanone Kaffeesatz', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+$font-family-sans-serif: 'Roboto Condensed', sans-serif;
 $font-family-base: $font-family-sans-serif !default;
-$font-size-base: 15px !default;
+$font-size-base: 13px !default;
 
 // Navbar
 
@@ -15,7 +15,6 @@ $navbar-default-link-active-color: #FFF !default;
 
 // Forms
 
-$input-border-radius: 0;
 $input-border-focus: #f72969 !default;
 
 // Buttons
@@ -23,6 +22,24 @@ $input-border-focus: #f72969 !default;
 $btn-default-color: #FFF;
 $btn-default-bg: #f72969 !default;
 $btn-default-border: #f72969 !default;
+
+// Form states and alerts
+
+$state-success-text:  #329932 !default;
+$state-success-bg:    #329932 !default;
+$state-success-border: darken(adjust-hue($state-success-bg, -10), 5%) !default;
+
+$state-info-text: #31708f !default;
+$state-info-bg: #d9edf7 !default;
+$state-info-border: darken(adjust-hue($state-info-bg, -10), 7%) !default;
+
+$state-warning-text: #FF3232 !default;
+$state-warning-bg: #FF3232 !default;
+$state-warning-border: darken(adjust-hue($state-warning-bg, -10), 5%) !default;
+
+$state-danger-text: #FF3232 !default;
+$state-danger-bg: #FF3232 !default;
+$state-danger-border: darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -85,10 +102,6 @@ section {
 
 .link-default {
   color: #f72969;
-}
-
-form label {
-  font-weight: normal;
 }
 
 .text-light {
