--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -27,7 +27,7 @@
     }
     &:checked {
       ~ label {
-        color: #FFB606;
+        color: #f72969;
         transition: all .25s;
       }
     }
@@ -48,7 +48,7 @@
     }
     &:checked + img {
       /* (RADIO CHECKED) IMAGE STYLES */
-      border: 2px solid #f00;
+      border: 2px solid #f72969;
     }
   }
 }
