--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,75 +1,178 @@
 // Body
 
-@import url("https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans+Condensed:300';");
-$font-family-sans-serif: 'Open Sans Condensed', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+$font-family-sans-serif: 'Roboto Condensed', sans-serif;
 $font-family-base: $font-family-sans-serif !default;
-$font-size-base: 15px !default;
+$font-size-base: 13px !default;
 
 // Navbar
-$navbar-height: 45px !default;
+
+$navbar-margin-bottom: 0px !important;
+$navbar-border-radius: 0;
+$navbar-height: 65px !default;
 $navbar-default-bg: #fff !default;
+
+// Forms
+
+$input-border-focus: #f72969 !default;
+
+// Buttons
+
+$btn-default-color: #FFF;
+$btn-default-bg: #f72969 !default;
+$btn-default-border: #f72969 !default;
+
+$btn-primary-color: #FFF;
+$btn-primary-bg: #6d26ff !default;
+$btn-primary-border: #6d26ff !default;
+
+$btn-danger-color: #FFF;
+$btn-danger-bg: #FF3232 !default;
+$btn-danger-border: #FF3232 !default;
+
+$btn-success-color: #FFF;
+$btn-success-bg: #329932 !default;
+$btn-success-border: #329932 !default;
+
+// Form states and alerts
+
+$state-success-text:  #329932 !default;
+$state-success-bg:    #329932 !default;
+$state-success-border: darken(adjust-hue($state-success-bg, -10), 5%) !default;
+
+$state-info-text: #31708f !default;
+$state-info-bg: #d9edf7 !default;
+$state-info-border: darken(adjust-hue($state-info-bg, -10), 7%) !default;
+
+$state-warning-text: #FF3232 !default;
+$state-warning-bg: #FF3232 !default;
+$state-warning-border: darken(adjust-hue($state-warning-bg, -10), 5%) !default;
+
+$state-danger-text: #FF3232 !default;
+$state-danger-bg: #FF3232 !default;
+$state-danger-border: darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "common";
 @import "answers";
 
 /* DEFAULT LAYOUT */
 
-h1, h2, h3 {
-  font-family: "Amatic SC", cursive;
+body {
+  background-color: #F1F1F1;
 }
 
-a:hover, a:focus {
-  text-decoration: none;
+h1, h2, h3 {
+  color: #767676;
+}
+
+footer {
+  margin-top: 50px;
 }
 
 .help-block {
-  color: #a94442;
+  color: #FF3232;
 }
 
-.navbar-brand {
-  font-family: "Amatic SC", cursive;
-  font-size: 30px !important;
-  text-transform: uppercase;
+.export-links {
+  text-align: right;
+}
+
+.data-link {
+  cursor: pointer;
 }
 
 .ordered-list {
   padding-left: 1em;
 }
 
-.color-line {
-  background: #f7f9fa;
-  height: 6px;
-  background-image: linear-gradient(to right, #34495e, #34495e 25%,
-    #9b59b6 25%, #9b59b6 35%, #3498db 35%, #3498db 45%, #62cb31 45%,
-    #62cb31 55%, #ffb606 55%, #ffb606 65%, #e67e22 65%, #e67e22 75%,
-    #e74c3c 85%, #e74c3c 85%, #c0392b 85%, #c0392b 100%);
-  background-size: 100% 6px;
-  background-position: 50% 100%;
-  background-repeat: no-repeat;
+.navbar-default {
+  border-bottom-color: #ACACAC;
 }
 
-.panel-list {
-  margin-bottom: 20px;
-  padding: 20px;
-  border-left: 6px solid #5bc0de;
-  background-color: #f4f8fa;
-  h2 {
-    margin: 0;
+.navbar-brand {
+  padding: 5px;
+  margin-left: 0px !important;
+}
+
+.header-content {
+  padding: 5px 110px 5px 110px;
+  border-bottom: 1px solid #ACACAC;
+  margin-bottom: 30px;
+  background-color: #FFF;
+  .media-body {
+    width: inherit;
+    h4 {
+      margin-top: 20px;
+      margin-bottom: 0;
+    }
   }
-  &:last-child {
-    margin-bottom: 0;
+  ul {
+    margin-top: 35px;
+    text-align: right;
+  }
+}
+
+@media (max-width: 978px) {
+  .header-content {
+    padding: 5px 20px 5px 20px;
+  }
+}
+
+.customer-panel {
+  background-color: #FFF;
+  padding: 15px;
+  border-left: 6px solid #f72969;
+  margin-bottom: 20px;
+  h2, h3 {
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
+}
+
+.survey-panel {
+  background-color: #FFF;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-left: 6px solid #6d26ff;
+  h3 {
+    margin-top: 0;
+    margin-bottom: 1px;
+  }
+  h4 {
+    color: #767676;
+    margin-bottom: 0px;
+  }
+  small {
+    color: #767676;
   }
   p {
-    margin-top: 5px;
+    margin-top: 8px;
+  }
+  .question-number {
+    padding: 3px 10px 3px 10px;
+    background-color: #f72969;
+    color: #FFF;
+    border-radius: 3px;
+    margin-right: 5px;
+  }
+}
+
+.default-panel {
+  background-color: #FFF;
+  padding: 15px;
+  border-left: 6px solid #f72969;
+  h3 {
+    margin-top: 0;
+    text-align: center;
   }
 }
 
 .panel-piled {
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  margin: 15px auto 45px;
   padding: 24px;
   position: relative;
   &:before, &:after {
@@ -102,6 +205,29 @@ a:hover, a:focus {
   p {
     margin-top: 5px;
   }
+  a.light-link {
+    color: #767676;
+  }
+  .counter {
+    padding: 3px 8px 3px 8px;
+    background-color: #f72969;
+    color: #FFF;
+    border-radius: 3px;
+  }
+}
+
+.user-panel {
+  background-color: #FFF;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-left: 6px solid #767676;
+  .media-body {
+    width: inherit;
+    h4 {
+      margin-top: 20px;
+      margin-bottom: 0;
+    }
+  }
 }
 
 /* File input */
@@ -128,18 +254,6 @@ a:hover, a:focus {
   filter: alpha(opacity=0);
 }
 
-.export-links {
-  text-align: right;
-}
-
-footer {
-  margin-top: 50px;
-}
-
-.data-link {
-  cursor: pointer;
-}
-
 /* MARGINS */
 
 .m-t-0 {
@@ -159,7 +273,7 @@ footer {
 }
 
 .m-b-1 {
-  margin-bottom: 15px;
+  margin-bottom: 15px !important;
 }
 
 /* PADDINGS */
