--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,4 +1,16 @@
-%h1.text-center.m-t-0
-  Edit #{@user.name} #{@user.last_name} information
-.user-admin-form
-  = render "form", user: @user, customers: @customers
+- content_for :sub_nav do
+  .col-md-6
+    %h1 Update the following information
+  .col-md-2
+    %ul.list-inline
+      %li
+        = link_to "All USERS", [:admin, :users]
+      %li
+        = link_to "NEW USER", [:new, :admin, :user]
+.container
+  .row
+    .col-md-8.col-md-offset-2
+      .default-panel
+        %h3
+          Edit #{@user} information
+        = render "form", user: @user, customers: @customers
