--- a/app/views/customers/_customer.html.haml
+++ b/app/views/customers/_customer.html.haml
@@ -1,30 +1,30 @@
-.panel-list
+.customer-panel
   .row
     .col-md-9
-      - if policy(customer).show?
-        %h2
-          = link_to customer.name, customer
-      - else
-        %h2
-          = customer.name
+      %h2
+        = customer.name
       %p
         = customer.description
+      - if policy(customer).show?
+        = link_to "SHOW CUSTOMER INFORMATION", customer
     .col-md-3
       .dropdown
         %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
         "data-toggle": "dropdown", href: "#", role: "button"}
-          %h2
-            %strong
-              = customer.surveys_count
-              Surveys
+          %h3
+            = customer.surveys_count
+            Surveys
             %span.caret
         %ul.dropdown-menu
           %li
-            = link_to "All surveys", [customer, :surveys]
+            = link_to "Display all surveys", [customer, :surveys]
           - if policy(Survey.new(customer: customer)).create?
             %li
-              = link_to "Create new", [:new, customer, :survey]
+              = link_to "Create new survey", [:new, customer, :survey]
           - if is_admin?
+            %li
+              = link_to "Edit customer information",
+                [:edit, :admin, customer.user, customer]
             %li
               = link_to "Archive customer", [:archive, :admin, customer.user, customer],
                 method: :patch,
