--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -1,12 +1,28 @@
-%h1.text-center.m-t-0
-  - if is_admin?
-    = link_to "#{@customer.name} Information", [:edit, :admin, @customer.user, @customer]
-  - else
-    #{@customer.name} Information
-%p.text-center
-  = @customer.description
+- content_for :sub_nav do
+  .col-md-5
+    %h1 #{@customer.name} details
+  .col-md-3
+    %ul.list-inline
+      %li
+        = link_to "ALL SURVEYS", [@customer, :surveys]
+      - if is_admin?
+        %li
+          = link_to "NEW CUSTOMER", [:new, :admin, current_user, :customer]
 
-- if @customer.surveys.any?
-  %h2.text-center
-    Surveys by date
-    = pie_chart @customer.surveys.date_surveys
+.container
+  .row
+    .col-md-8.col-md-offset-2
+      .panel-piled
+        %h1.text-center
+          - if is_admin?
+            = link_to "#{@customer.name} Information",
+              [:edit, :admin, @customer.user, @customer]
+          - else
+            #{@customer.name} Information
+        %p.text-center
+          = @customer.description
+
+        - if @customer.surveys.any?
+          %h2.text-center
+            Surveys by date
+            = pie_chart @customer.surveys.date_surveys
