--- a/app/views/layouts/shared/_app_nav_bar.html.haml
+++ b/app/views/layouts/shared/_app_nav_bar.html.haml
@@ -1,4 +1,3 @@
-.color-line
 %nav.navbar.navbar-default
   .container-fluid
     / Brand and toggle get grouped for better mobile display
@@ -10,39 +9,43 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to "Dynamic Surveys", customers_path, class: "navbar-brand"
+      = link_to image_tag("logo.png", width: 150), customers_path, class: "navbar-brand"
     / Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
         - if logged_in?
           %li.dropdown
             %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true", "data-toggle": "dropdown", href: "#", role: "button"}
-              Customers
+              CUSTOMERS
               %span.caret
             %ul.dropdown-menu
               %li
-                = link_to "All Customers", customers_path
+                = link_to "Display all customers", customers_path
               - if is_admin?
                 %li
-                  = link_to "New Customer", [:new, :admin, current_user, :customer]
+                  = link_to "Create new customer", [:new, :admin, current_user, :customer]
           - if is_admin?
             %li.dropdown
-              %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true", "data-toggle": "dropdown", href: "#", role: "button"}
-                Users
+              %a.dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
+                "data-toggle": "dropdown", href: "#", role: "button"}
+                USERS
                 %span.caret
               %ul.dropdown-menu
                 %li
-                  = link_to "All Users", [:admin, :users]
+                  = link_to "Display all users", [:admin, :users]
                 %li
-                  = link_to "New User", [:new, :admin, :user]
+                  = link_to "Create new user", [:new, :admin, :user]
       %ul.nav.navbar-nav.navbar-right
         - if logged_in?
-          %p.navbar-text
-            = link_to  "Signed in as #{current_user}", current_user
           %li
-            = link_to "Sign Out", session_path(current_user), method: :delete
-        - else
+            = link_to fa_icon("cogs", text: current_user.to_s.upcase),
+              current_user
           %li
-            = link_to "Sign Up", [:new, :user]
-          %li
-            = link_to "Sign In", [:new, :session]
+            = link_to "SIGN OUT", session_path(current_user), method: :delete
+
+      = form_tag(search_surveys_path, method: "get", id: "survey-search-form",
+        class: "navbar-form navbar-right") do
+        .form-group
+          = text_field_tag :search, params[:search], placeholder: "Search Surveys",
+            class: "form-control"
+        = button_tag "SEARCH", class: "btn btn-default"
