--- a/app/views/submissions/index.js.haml
+++ b/app/views/submissions/index.js.haml
@@ -1,1 +1,12 @@
-$("#{  j render "index" }").modal();
+var list = $("#submissions-list");
+if (!list.length) { $("#{  j render "index" }").modal(); }
+
+- if params[:page].present?
+  list.find("tbody").append('#{ j render @submissions }');
+  - if @submissions.total_pages == @submissions.current_page
+    list.find("#show_more").hide();
+  - else
+    list.find("#show_more").attr("href", "#{ survey_submissions_path(@survey, page: @submissions.current_page + 1)}");
+- else
+  list.find("#show_more").hide();
+
