--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -1,46 +1,62 @@
-%h1.text-center.m-t-0
-  Survey submitted by
-  %small
-    #{@submission.user.name} #{@submission.user.last_name}
-.panel-piled
-  %h1
-    = @submission.survey.name
-  %p
-    Submitted
-    = time_ago_in_words(@submission.created_at)
-    ago -
-    = @submission.created_at.strftime("%m/%d/%Y at %I:%M%p")
+- content_for :sub_nav do
+  .col-md-5
+    %h1
+      Submitted by
+      %small
+        #{@submission.user}
+  .col-md-3
+    %ul.list-inline
+      - if policy(@submission.survey).show?
+        %li
+          = link_to "PREVIEW THIS SURVEY",
+            [@submission.survey.customer, @submission.survey],
+            class: "btn btn-sm btn-primary"
+      %li
+        = link_to "#{@submission.survey.customer.surveys_count} surveys total",
+          [@submission.survey.customer, :surveys]
 
-  %h2
-    Questions
+.container
+  .row
+    .col-md-8.col-md-offset-2
+      .panel-piled
+        %h1
+          = @submission.survey.name
+        %p
+          Submitted
+          = time_ago_in_words(@submission.created_at)
+          ago -
+          = @submission.created_at.strftime("%m/%d/%Y at %I:%M%p")
 
-  - @submission.answers.each do |answer|
-    %h3
-      = answer.question.title
-    - if answer.answer_open.present?
-      %p
-        Response:
-        = answer.answer_open.response
-    - if answer.answer_date.present?
-      %p
-        Response:
-        = answer.answer_date.response
-    - if answer.answer_raiting.present?
-      %p
-        Response:
-        = answer.answer_raiting.response
-    - if answer.answer_image.present?
-      %p
-        Response:
-        = answer.answer_image.image
-    - if answer.choice_answer.present?
-      %p
-        Response:
-        = answer.choice_answer.choice.try(:title)
-    - if answer.answer_multiple.present?
-      %p
-        Response:
-        = answer.answer_multiple.choices.map(&:title).join(', ')
+        %h2
+          Questions
+
+        - @submission.answers.each do |answer|
+          %h3
+            = answer.question.title
+          - if answer.answer_open.present?
+            %p
+              Response:
+              = answer.answer_open.response
+          - if answer.answer_date.present?
+            %p
+              Response:
+              = answer.answer_date.response
+          - if answer.answer_raiting.present?
+            %p
+              Response:
+              = answer.answer_raiting.response
+          - if answer.answer_image.present?
+            %p
+              Response:
+              = answer.answer_image.image
+          - if answer.choice_answer.present?
+            %p
+              Response:
+              = answer.choice_answer.choice.try(:title)
+          - if answer.answer_multiple.present?
+            %p
+              Response:
+              = answer.answer_multiple.choices.map(&:title).join(', ')
 
 
 
