--- a/app/views/surveys/_form.html.haml
+++ b/app/views/surveys/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for [@customer, @survey] do |f|
   = f.input :name, label: false, placeholder: "Name"
-  = f.input :description, label: false, placeholder: "Description"
+  = f.input :description, label: false, input_html: { rows: 4 }, placeholder: "Description"
   .image-fields
     .row
       .col-xs-3
@@ -9,7 +9,7 @@
           = f.file_field :avatar, label: false, class: "upload"
           = f.input :avatar_cache, as: :hidden
       .col-xs-5
-        %h3.file-name.m-t-0
+        %small.file-name.m-t-0
           = file_name f.object.avatar
 
   = f.fields_for :questions do |builder|
@@ -17,7 +17,7 @@
 
   .form-group
     = link_to_add_fields fa_icon("plus", text: "Add some questions"),
-      f, :questions, "btn btn-warning btn-sm"
+      f, :questions, "btn btn-default btn-sm"
 
   = f.button :submit, "Save survey",
     class: "btn-block btn-primary", data: { disable_with: "Saving survey..." }
