--- a/app/views/surveys/_image_fields.html.haml
+++ b/app/views/surveys/_image_fields.html.haml
@@ -5,10 +5,10 @@
         %span Upload an image for this question
         = f.file_field :file, label: false, class: "upload"
         = f.input :file_cache, as: :hidden
-    .col-xs-1
+    .col-xs-2
       = f.hidden_field :_destroy
       = link_to fa_icon("trash-o"), "#", data: { behavior: "remove_image_fields" },
         class: "pull-right"
     .col-xs-5
-      %h3.file-name.m-t-0
+      %small.file-name.m-t-0
         = file_name f.object.file
