--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,3 +1,10 @@
-%h1.text-center.m-t-0
-  Edit your information
-= render "form"
+- content_for :sub_nav do
+  .col-md-6
+    %h1 #{current_user} - personal details
+.container
+  .row
+    .col-md-8.col-md-offset-2
+      .default-panel
+        %h3
+          Edit your information
+        = render "form"
