--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,16 @@
-%h1.text-center.m-t-0
-  = link_to "#{current_user.name} #{current_user.last_name} Profile",
-    [:edit, current_user]
+- content_for :sub_nav do
+  .col-md-6
+    %h1 #{current_user} profile details
 
-= render "layouts/shared/alert_messages"
+.container
+  .row
+    .col-md-8.col-md-offset-2
+      .panel-piled
+        %h1.text-center.m-b-1
+          = link_to "#{current_user.name} #{current_user.last_name} Profile",
+            [:edit, current_user]
 
-= display_image(current_user.image)
+        = display_image(current_user.image)
 
-%h4.text-center
-  = current_user.email
+        %h4.text-center
+          = current_user.email
