--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1 #{@survey.customer.name} Survey - Structure
+    %h1 Survey report and statistics
   .col-md-3
     %ul.list-inline
       %li
