--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -81,4 +81,8 @@
 
         = render @survey.questions
 
+- if @survey.avatar.present?
+  :css
+    body { background: url(#{@survey.avatar.url}); }
+
 
